--- a/designapp1/templates/courses.html
+++ b/designapp1/templates/courses.html
@@ -35,8 +35,7 @@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="group-input">Group</label>
-                            <input type="number" id="group-input" class="form-control"
-                                   min="1" step="1">
+                            <input type="number" id="group-input" class="form-control" oninput="this.value=this.value.replace(/[^0-9]/g,'');">
 {#                            <select id="group-dropdown" class="form-control" disabled>#}
 {#                                <option disabled selected value="0"> Selecting groups is not a thing yet</option>#}
 {#                            </select>#}
