--- a/designapp1/templates/userpage.html
+++ b/designapp1/templates/userpage.html
@@ -16,31 +16,50 @@
 - Change role -->
 
 {% block content %}
+
+    {% include 'navbar.html' %}
+
     <div class="container bg-light p-4">
         <div class="row">
             <div id="user-info"></div>
-                <div class="col-8">
+                <div class="col-6">
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="email">E-Mail</span>
                         </div>
-                        <input type="text" class="form-control disabled" id="email">test.email@asdasd</input>
+                        <input type="text" class="form-control" id="email" placeholder="test.email@asdasd" disabled>
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="role">Role</span>
+                        </div>
+                        <input type="text" class="form-control" id="role" placeholder="Student" disabled>
+                        <div class="input-group-append">
+                            <button class="btn btn-danger">Edit</button>
+                        </div>
                     </div>
                 </div>
-                <div class="col-4 text-left">
+                <div class="col-6 text-right">
                     <label>Verfied: </label>
-                    <span>&check</span>
-                    <span>&cross</span>
+                    <span>&#x2714</span>
+                    <span>&#x2718</span>
                 </div>
-            <hr/>
+        </div>
+        <hr/>
+        <div class="row">
+            <div class="col-6">
+                <div class="nav flex-column nav-pills" id="courses-nav" role="tablist"></div>
+            </div>
+            <div class="col-6">
+                databases
+            </div>
 
 
 
 
 
             <div class="text-center">
-                    <button class="btn btn-danger">Delete User</button>
-                </div>
+                <button class="btn btn-danger">Delete User</button>
             </div>
             <div class="col-12 text-center">
                 <!-- content -->
