you can now see your own credentials yay

--- a/designapp1/templates/student_view.html
+++ b/designapp1/templates/student_view.html
@@ -57,10 +57,10 @@
                             <p id="have-credentials-status" class="text-center text-success">You already have
                                 credentials for this course</p>
                             <hr>
-                            Credentials blabla
+                            <div id="credentials-div">Credentials blabla</div>
                             <div class="form-group row align-items-center px-2 px-md-5">
-                                <button class="btn btn-secondary my-4">Cool button</button>
-                                <button class="btn btn-secondary my-4">Cool button</button>
+                                <button class="btn btn-danger my-4">Delete database and release credentials (WIP)</button>
+                                <button class="btn btn-info my-4">Reset database (WIP)</button>
                             </div>
                         </div>
 
