--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -2,6 +2,7 @@
 @import "~bootstrap/scss/bootstrap"
 @import "~bootstrap-select/sass/bootstrap-select"
 @import "~bootstrap-cookie-alert/cookiealert.css"
+@import '~sweetalert2/src/sweetalert2.scss'
 
 // -webkit-appearance: none
 
