fixed some styling issues

--- a/designapp1/templates/student_view.html
+++ b/designapp1/templates/student_view.html
@@ -42,7 +42,7 @@
                                 for this
                                 course yet</p>
                             <hr>
-                            <div class="form-group row align-items-center px-2 px-md-5">
+                            <div class="form-group row align-items-center px-5">
                                 <label for="group-input" class="col-12 col-md-4">Please select a group</label>
                                 <input type="number" id="group-input" class="form-control col-12 col-md-8"
                                        oninput="this.value=this.value.replace(/[^0-9]/g,'');">
