userpage ts still has some compile errors

--- a/designapp1/templates/userpage.html
+++ b/designapp1/templates/userpage.html
@@ -51,16 +51,13 @@
                 <div class="nav flex-column nav-pills" id="courses-nav" role="tablist"></div>
             </div>
             <div class="col-6">
-                databases
+                <div id="courses-db"></div>
             </div>
-
-
-
-
 
             <div class="text-center">
                 <button class="btn btn-danger">Delete User</button>
             </div>
+            
             <div class="col-12 text-center">
                 <!-- content -->
 
