--- a/designapp1/templates/userpage.html
+++ b/designapp1/templates/userpage.html
@@ -6,7 +6,7 @@
 
 {% block scripts %}
     <link rel="stylesheet" href="/static/css/main.css">
-    <script defer src="/static/scripts/userpage.js"></script>
+    <script defer src="/static/scripts/user.js"></script>
 {% endblock %}
 
 <!-- - Inspect datails
