removed some unnecessary things

--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -6,8 +6,8 @@
 
 // -webkit-appearance: none
 
-body
-  font-family: 'Barlow Semi Condensed3', sans-serif
+//body
+//  font-family: 'Barlow Semi Condensed3', sans-serif
 
 .cookiealert
   position: absolute !important
