search, sort and delete

--- a/designapp1/templates/navbar.html
+++ b/designapp1/templates/navbar.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="/">Database Administration Bundle</a>
+        <a class="navbar-brand" href="/">
+            <h4>Database Administration Bundle</h4>
+        </a>
         <ul class="navbar-nav mr-auto text-white">
             <div id="whoamiWelcome">
             </div>
