--- a/designapp1/templates/admin.html
+++ b/designapp1/templates/admin.html
@@ -6,11 +6,16 @@
 
 {% block scripts %}
     <link rel="stylesheet" href="/static/css/main.css">
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css"> -->
+
+    <script defer type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
+
     <script defer src="/static/scripts/admin.js"></script>
 
-    <!-- Include as proper ts, had to include jQuery for now -->
-    <!-- This is the search function for user table -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script defer>
     $(document).ready(function(){
       $("#search").on("keyup", function() {
@@ -20,6 +25,12 @@
         });
       });
     });
+
+    // datatables encounters some error because of undefined
+    $(document).ready( function () {
+        $("#user_table").DataTable();
+    });
+
     </script>
 
 {% endblock %}
@@ -30,76 +41,45 @@
 
     <div class="container bg-light p-4">
         <!-- Website title -->
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-12 text-center">
                 <h1>Admin homepage</h1>
                 <hr/>
+
             </div>
-        </div>
-        <div class="row mt-4">
+        </div> -->
+        <div class="row mt-2">
             <div class="col-5">
-                <div class="overflow-auto" style="height: 300px;">
-                    <div class="nav flex-column nav-pills" id="courses-nav" role="tablist"></div>
+                <h2 class="text-center">Courses</h2>
+                <div class="overflow-auto border rounded" style="height: 300px;">
+                    <div class="nav flex-column nav-pills" id="courses-nav" role="tablist">
+                        <div class="spinner-border text-info"></div>
+                    </div>
                 </div>
             </div>
             <div class="col-7">
-                <div class="tab-content" id="courses-content"></div>
+                <div class="tab-content" id="courses-content">
+                    <div class="spinner-border text-info"></div>
+                </div>
             </div>
         </div>
         <hr/>
         <div class="row mt-4">
-            <!-- <div class="col-4">
-                <div class="text-center">
-                    <h1>Filters</h1>
-                </div>
-
-                <input class="form-control" type="text" id="search" placeholder="Search...">
-
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="adminCheck">
-                    <label class="form-check-label" for="adminCheck">Admins</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="TACheck">
-                    <label class="form-check-label" for="TACheck">TAs</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="studentCheck">
-                    <label class="form-check-label" for="studentCheck">Students</label>
-                </div>
-
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <select class="custom-select">
-                            <option selected>Sort by...</option>
-                            <option value="1">Identifier</option>
-                            <option value="2">Role</option>
-                            <option valie="3">E-Mail</option>
-                        </select>
-                    </div>
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" type="button">
-                            &#8645
-                        </button>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <button class="btn btn-info" type="submit">Apply Filters</button>
-                </div>
-            </div> -->
             <div class="col-12">
                 <input class="form-control mb-3" type="text" id="search" placeholder="Search...">
                 <div class="overflow-auto tableFixHead" style="height: 800px;">
-                    <table class="table table-sm table-hover table-fixed">
-                        <thead class="thead dark">
-                        <tr>
-                            <th class="th-sm" scope="col">#</th>
-                            <th class="th-sm" scope="col">Role</th>
-                            <th class="th-sm" scope="col">E-Mail</th>
-                            <th class="th-sm" scope="col">Verified</th>
-                        </tr>
+                    <table id="user_table" class="table table-sm table-hover table-fixed table-borderless table-striped">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th class="th-sm" scope="col">&#8645 #</th>
+                                <th class="th-sm" scope="col">Role</th>
+                                <th class="th-sm" scope="col">E-Mail</th>
+                                <th class="th-sm" scope="col">Verified</th>
+                            </tr>
                         </thead>
-                        <tbody id="users"></tbody>
+                        <tbody id="users">
+                            <tr class="spinner-border text-info"></tr>
+                        </tbody>
                     </table>
                 </div>
             </div>
