--- a/designapp1/templates/student_view.html
+++ b/designapp1/templates/student_view.html
@@ -14,8 +14,7 @@
     <div class="container-fluid py-3 py-md-5">
         <div class="row px-0 px-md-5 center-block flex-row">
             <div class="col-12 col-md-4">
-                <div class=" center-block
-    container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
+                <div class=" center-block container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
                     <!-- Website title -->
                     <h2>Course list</h2>
                     <hr/>
@@ -26,8 +25,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-8 mt-3 mt-md-0 d-flex">
-                <div class="center-block
-    container border border-dark rounded-lg shadow-lg bg-white p-3  p-xl-5 text-center">
+                <div class="center-block container border border-dark rounded-lg shadow-lg bg-white p-3  p-xl-5 text-center">
 
                     <div class="tab-content" id="courses-content">
 
