started implementing forgot password page

--- a/designapp1/templates/login.html
+++ b/designapp1/templates/login.html
@@ -22,7 +22,7 @@
                         {{ message }}
                     </div>
                     <!-- Forgot Password -->
-                    <a href="missing">Forgot password?</a>
+                    <a href="forgot_password_page">Forgot password?</a>
                     <!-- Sign in button -->
                     <button class="btn btn-info btn-block my-4" type="submit">Sign in</button>
                     <!-- Register -->
