further work on forgot password page, added "connect to this server" msg

--- a/designapp1/templates/student_view.html
+++ b/designapp1/templates/student_view.html
@@ -57,7 +57,10 @@
                             <p id="have-credentials-status" class="text-center text-success">You already have
                                 credentials for this course</p>
                             <hr>
-                            <div id="credentials-div">Credentials blabla</div>
+                            <p class="text-center mb-2" id="have-credentials-database-info">
+                                To use the database, connect to {{ server_address }} using these credentials:
+                            </p>
+                            <div id="credentials-div">Credentials default page</div>
 
                         </div>
 
