--- a/designapp1/templates/userpage.html
+++ b/designapp1/templates/userpage.html
@@ -22,31 +22,54 @@
     <div class="container bg-light p-4">
         <div class="row">
             <div id="user-info"></div>
-                <div class="col-7">
-                    <div class="form-group row">
-                        <label class="col-12 col-md-4 col-form-label">Username:</label>
-                        <div class="col-12 col-md-8" id="username">
-                            <!-- <input type="text" class="form-control" value="${db.username}" readonly=""> -->
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-12 col-md-4 col-form-label">Role:</label>
-                        <div class="col-12 col-md-8" id="role">
-                            <!-- <input type="text" class="form-control" value="${db.role}" readonly=""> -->
-                        </div>
-                    </div>
+            <div class="col-8">
+                <div class="form-group row">
+                    <label class="col-12 col-md-4 col-form-label">Username:</label>
+                    <div class="col-12 col-md-8" id="username"></div>
                 </div>
-                <div class="col-5 text-right">
-                    <label>Verified: </label>
-                    <div class="d-inline" id="verified">
-                        <!-- <span>&#x2714</span>
-                        <span>&#x2718</span> -->
-                    </div>
-
-                    <div class="text-center">
-                        <button id="delete_button" class="btn btn-danger">Delete User</button>
-                    </div>
+                <div class="form-group row">
+                    <label class="col-12 col-md-4 col-form-label">Role:</label>
+                    <div class="col-12 col-md-8" id="role"></div>
                 </div>
+            </div>
+            <div class="col-4 text-right">
+                <label>Verified: </label>
+                <div class="d-inline" id="verified"></div>
+                <div class="text-right">
+                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#editUserRoleModal">
+                        Edit Role
+                    </button>
+                    <button id="delete_button" type="button" class="btn btn-danger">
+                        Delete User
+                    </button>
+                </div>
+                <!-- Edit User Role Modal -->
+                <div class="modal fade" id="editUserRoleModal" tabindex="-1" role="dialog">
+                  <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title">Edit Role</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span>&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        Change user role to:
+                        <select id="selected_role" class=custom-select">
+                            <option value="0" selected>Admin</option>
+                            <option value="1">Teacher</option>
+                            <option value="2">Student</option>
+                            <option value="2">Teaching Assistant</option>
+                        </select>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Decline</button>
+                        <button id="change_role" type="button" class="btn btn-primary">Confirm</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
         </div>
         <hr/>
         <div class="row">
