all fields now work with enter

--- a/designapp1/templates/reset_password.html
+++ b/designapp1/templates/reset_password.html
@@ -17,7 +17,7 @@
             <div class="col-11 col-md-7 col-xl-4 center-block
     container border border-dark rounded-lg shadow-lg bg-white">
                 <!-- Register Form -->
-                <div class="p-5 form-horizontal" id="content"> {# actual content #}
+                <form class="p-5 form-horizontal" id="content"> {# actual content #}
                     <p class="text-center h4 mb-4">Reset password</p>
                     <hr/>
                     <div class="mt-5 form-group row align-items-center">
@@ -45,10 +45,10 @@
                     <p class="text-center small mb-2">Please use a password that has 8 characters or more, and contains
                         at least one lowercase letter, one uppercase letter, and one number</p>
                     <hr>
-                    <button class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3" id="new-password-button">Set new password
+                    <button type="submit"  class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3" id="new-password-button">Set new password
                     </button>
                     <div class="mt-5 align-items-center center-block " id="alert-div"></div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
