--- a/designapp1/templates/forgot_password_page.html
+++ b/designapp1/templates/forgot_password_page.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block scripts %}
-        <script defer src="/static/scripts/forgot_password_page.js"></script>
+    <script defer src="/static/scripts/forgot_password_page.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -13,25 +13,28 @@
         <div class="row">
             <div class="col-11 col-md-7 col-xl-4 center-block
     container border border-dark rounded-lg shadow-lg bg-white">
-                <!-- Register Form -->
                 <p class="text-left small mt-2 mb-0"><a href="/login">Back to login page</a></p>
-                <div class="p-5 form-horizontal" id="content"> {# actual content #}
+                <!-- Register Form -->
+
+                <form class="p-5 form-horizontal" id="content"> {# actual content #}
                     <p class="text-center h4">Account recovery</p>
                     <div class="mt-5 form-group row align-items-center">
-                        <label for="register-email-field" class="col-12 col-md-4 col-form-label">UT e-mail address</label>
+                        <label for="register-email-field" class="col-12 col-md-4 col-form-label">UT e-mail
+                            address</label>
                         <div class="col-12 col-md-8 align-middle">
                             <input type="email" name="email" class="form-control my-1" id="register-email-field"
                                    autofocus maxlength="256" required="">
                             <div class="invalid-feedback"></div>
                         </div>
                         <hr>
-                        <button class="btn btn-info btn-block mt-5 mb-1 mx-5" id="password-button">Request new
+                        <button type="submit" class="btn btn-info btn-block mt-5 mb-1 mx-5" id="password-button">Request
+                            new
                             password
                         </button>
 
                     </div>
                     <div class="mt-5 align-items-center center-block " id="alert-div"></div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
