--- a/designapp1/templates/student_view.html
+++ b/designapp1/templates/student_view.html
@@ -42,12 +42,15 @@
                                 for this
                                 course yet</p>
                             <hr>
-                            <form id="no-credentials-form" class="form-group row align-items-center px-5">
-                                <label for="group-input" class="col-12 col-md-4">Please select a group</label>
-                                <input type="number" id="group-input" class="form-control col-12 col-md-8"
-                                       oninput="this.value=this.value.replace(/[^0-9]/g,'');">
-                                <button type="submit" class="btn btn-info my-4" id="credentials-button">Get credentials</button>
-
+                            <form id="no-credentials-form" class="form-group">
+                                <div class="form-group row align-items-center px-5">
+                                    <label for="group-input" class="col-12 col-md-4">Please select a group</label>
+                                    <input type="number" id="group-input" class="form-control col-12 col-md-8"
+                                           oninput="this.value=this.value.replace(/[^0-9]/g,'');">
+                                </div>
+                                <button type="submit" class="btn btn-info my-4" id="credentials-button">Get
+                                    credentials
+                                </button>
                             </form>
                         </div>
 
