change password page now properly disables links; added a login.ts; login page now shows you that you still need to verify your email

--- a/designapp1/templates/change_password.html
+++ b/designapp1/templates/change_password.html
@@ -17,7 +17,7 @@
             <div class="col-11 col-md-7 col-xl-4 center-block
     container border border-dark rounded-lg shadow-lg bg-white">
                 <!-- Register Form -->
-                <p class="text-left small mt-2 mb-0"><a href="/" id="homepage-ref">Back to homepage</a></p>
+{#                <p class="text-left small mt-2 mb-0"><a href="/" id="homepage-ref">Back to homepage</a></p>#}
                 <form class="p-5 form-horizontal" id="content"> {# actual content #}
                     <p class="text-center h4 mb-4">Change password</p>
                     <hr/>
