--- a/designapp1/templates/login.html
+++ b/designapp1/templates/login.html
@@ -9,17 +9,28 @@
 {% endblock %}
 
 {% block content %}
-        <template class="{{ template_class }}" id="django-template"></template>
+    <template class="{{ template_class }}" id="django-template"></template>
 
     <div class="container-fluid py-3 py-md-5">
         <div class="row">
             <div class="col-11 col-md-7 col-xl-4 center-block
     container border border-dark rounded-lg shadow-lg bg-white">
                 <!-- Login Form -->
-                <form class="text-center p-5" action="/login" method="POST">
+                <form class="text-center p-5" action="/login" method="POST" id="login-form">
                     {% csrf_token %}
                     <p class="h4 mb-4">Sign in</p>
-                    {{ form }}
+                    <div class="form-group row align-items-center">
+                        <input type="text" name="mail" class="form-control my-1" placeholder="E-Mail Address"
+                               autofocus="" id="email-input" maxlength="100" required="">
+
+                        <div class="invalid-feedback"></div>
+                    </div>
+                    <div class="form-group row align-items-center">
+                        <input type="password" name="password" class="form-control my-1" placeholder="Password"
+                               id="password-input" required="">
+                        <div class="invalid-feedback"></div>
+                    </div>
+
                     <!-- Username -->
                     <!-- <input type="username" id="loginId" class="form-control mb-4" placeholder="Database id" required autofocus> -->
                     <!-- Password -->
