--- a/designapp1/templates/admin.html
+++ b/designapp1/templates/admin.html
@@ -13,81 +13,104 @@
 
     {% include 'navbar.html' %}
 
-    <div class="container bg-light p-4">
-        <!-- Website title -->
-        <div class="row">
-            <div class="col-12 text-center">
-                <h1>Admin homepage</h1>
-                <hr/>
-            </div>
-        </div>
-        <div class="row mt-4">
-            <div class="col-5">
-                <div class="overflow-auto" style="height: 300px;">
-                    <div class="nav flex-column nav-pills" id="courses-nav" role="tablist"></div>
-                </div>
-            </div>
-            <div class="col-7">
-                <div class="tab-content" id="courses-content"></div>
-            </div>
-        </div>
-        <hr/>
-        <div class="row mt-4">
-            <div class="col-4">
-                <div class="text-center">
-                    <h1>Filters</h1>
-                </div>
-                <!-- Search -->
-                <input class="form-control" type="text" placeholder="Search E-Mail">
-                <!-- Checkboxes -->
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="adminCheck">
-                    <label class="form-check-label" for="adminCheck">Admins</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="TACheck">
-                    <label class="form-check-label" for="TACheck">TAs</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="studentCheck">
-                    <label class="form-check-label" for="studentCheck">Students</label>
-                </div>
-                <!-- Sort by -->
-                <!-- TODO: fix double arrows -->
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <select class="custom-select">
-                            <option selected>Sort by...</option>
-                            <option value="1">Identifier</option>
-                            <option value="2">Role</option>
-                            <option valie="3">E-Mail</option>
-                        </select>
+    <div class="container-fluid py-3 py-md-5">
+        <div class="row px-0 px-md-5 center-block flex-row">
+            <div class="col-12 col-lg-6">
+                <div class=" center-block
+    container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
+                    <!-- Website title -->
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <h3>Courses</h3>
+                            <hr/>
+                        </div>
                     </div>
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" type="button">
-                            &#8645
-                        </button>
+                    <div class="row mt-4">
+                        <div class="col-5">
+                            <div class="overflow-auto" style="height: 300px;">
+                                <div class="nav flex-column nav-pills" id="courses-nav" role="tablist"></div>
+                            </div>
+                        </div>
+                        <div class="col-7">
+                            <div class="tab-content" id="courses-content"></div>
+                        </div>
                     </div>
-                </div>
-                <!-- Apply filters -->
-                <div class="text-center">
-                    <button class="btn btn-info" type="submit">Apply Filters</button>
+
                 </div>
             </div>
-            <div class="col-8">
-                <h1 class="text-center">table with all users</h1>
-                <div class="overflow-auto" style="height: 800px;">
-                    <table class="table table-sm table-hover table-fixed">
-                        <thead class="thead dark">
-                        <tr>
-                            <th class="th-sm" scope="col">#</th>
-                            <th class="th-sm" scope="col">Role</th>
-                            <th class="th-sm" scope="col">E-Mail</th>
-                            <th class="th-sm" scope="col">Verified</th>
-                        </tr>
-                        </thead>
-                        <tbody id="users"></tbody>
-                    </table>
+
+
+            <div class="col-12 col-lg-6 mt-5 mt-lg-auto">
+                <div class=" center-block
+    container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
+
+
+                    <div class="row">
+                        <div class="col-12">
+                                                        <h3 class="text-center">Users</h3>
+
+{#                            <div class="text-center">#}
+{#                                <h3>Filters</h3>#}
+{#                            </div>#}
+                            <!-- Search -->
+{#                            this should be a form#}
+                            <form class="form-horizontal form-inline" id="filter-form">
+                                <input class="form-control" type="text" placeholder="Filter by e-mail">
+                                <!-- Checkboxes -->
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="adminCheck">
+                                    <label class="form-check-label" for="adminCheck">Admins</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="TACheck">
+                                    <label class="form-check-label" for="TACheck">TAs</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="studentCheck">
+                                    <label class="form-check-label" for="studentCheck">Students</label>
+                                </div>
+                                <!-- Sort by -->
+                                <!-- TODO: fix double arrows -->
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <select class="custom-select">
+                                            <option selected>Sort by...</option>
+                                            <option value="1">Identifier</option>
+                                            <option value="2">Role</option>
+                                            <option valie="3">E-Mail</option>
+                                        </select>
+                                    </div>
+                                    <div class="input-group-append">
+                                        <button class="btn btn-outline-secondary" type="button">
+                                            &#8645
+                                        </button>
+                                    </div>
+                                </div>
+                                <!-- Apply filters -->
+                                <div class="text-center">
+                                    <button class="btn btn-info" type="submit">Apply Filters</button>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="col-12">
+                            <hr>
+                        </div>
+                        <div class="col-12">
+                            <div class="overflow-auto" style="height: 800px;">
+                                <table class="table table-sm table-hover table-fixed">
+                                    <thead class="thead dark">
+                                    <tr>
+                                        <th class="th-sm" scope="col">#</th>
+                                        <th class="th-sm" scope="col">Role</th>
+                                        <th class="th-sm" scope="col">E-Mail</th>
+                                        <th class="th-sm" scope="col">Verified</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody id="users"></tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
