--- a/designapp1/templates/admin.html
+++ b/designapp1/templates/admin.html
@@ -47,49 +47,47 @@
 
                     <div class="row">
                         <div class="col-12">
-                                                        <h3 class="text-center">Users</h3>
+                            <h3 class="text-center">Users</h3>
 
-{#                            <div class="text-center">#}
-{#                                <h3>Filters</h3>#}
-{#                            </div>#}
+                            {#                            <div class="text-center">#}
+                            {#                                <h3>Filters</h3>#}
+                            {#                            </div>#}
                             <!-- Search -->
-{#                            this should be a form#}
+                            {#                            this should be a form#}
                             <form class="form-horizontal form-inline" id="filter-form">
                                 <input class="form-control" type="text" placeholder="Filter by e-mail">
                                 <!-- Checkboxes -->
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="adminCheck">
-                                    <label class="form-check-label" for="adminCheck">Admins</label>
+                                    <input class="form-check-input" type="checkbox" value="" id="adminCheck"><br>
+                                    <label class="form-check-label small" for="adminCheck">Admins</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="" id="TACheck">
-                                    <label class="form-check-label" for="TACheck">TAs</label>
+                                    <label class="form-check-label small" for="TACheck">TAs</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="" id="studentCheck">
-                                    <label class="form-check-label" for="studentCheck">Students</label>
+                                    <label class="form-check-label small" for="studentCheck">Students</label>
                                 </div>
                                 <!-- Sort by -->
                                 <!-- TODO: fix double arrows -->
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <select class="custom-select">
-                                            <option selected>Sort by...</option>
-                                            <option value="1">Identifier</option>
-                                            <option value="2">Role</option>
-                                            <option valie="3">E-Mail</option>
-                                        </select>
-                                    </div>
-                                    <div class="input-group-append">
-                                        <button class="btn btn-outline-secondary" type="button">
-                                            &#8645
-                                        </button>
-                                    </div>
-                                </div>
+                                {#                                <div class="input-group">#}
+                                {#                                    <div class="input-group-prepend">#}
+                                <select class="custom-select">
+                                    <option selected>Sort by...</option>
+                                    <option value="1">Identifier</option>
+                                    <option value="2">Role</option>
+                                    <option value="3">E-Mail</option>
+                                </select>
+                                {#                                    </div>#}
+                                {#                                    <div class="input-group-append">#}
+                                <button class="btn btn-outline-secondary" type="button">
+                                    &#8645
+                                </button>
+                                {#                                    </div>#}
+                                {#                                </div>#}
                                 <!-- Apply filters -->
-                                <div class="text-center">
-                                    <button class="btn btn-info" type="submit">Apply Filters</button>
-                                </div>
+                                <button class="btn btn-info" type="submit">Apply Filters</button>
                             </form>
                         </div>
                         <div class="col-12">
