--- a/designapp1/templates/admin.html
+++ b/designapp1/templates/admin.html
@@ -37,11 +37,11 @@
 
     {% include 'navbar.html' %}
 
-    <div class="container-fluid py-3 py-md-5">
-        <div class="row px-0 px-md-5 center-block flex-row">
+    <div class="container-fluid py-3 py-lg-5">
+        <div class="row px-0 px-lg-5 center-block flex-row">
             <div class="col-12 col-lg-6">
                 <div class=" center-block
-    container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
+    container border border-dark rounded-lg shadow-lg bg-white p-3 py-xl-5 text-center">
                     <!-- Website title -->
                     <div class="row">
                         <div class="col-12 text-center">
@@ -49,15 +49,15 @@
                             <hr/>
                         </div>
                     </div>
-                    <div class="row mt-4">
-                        <div class="col-5">
+                    <div class="row mt-4 d-flex flex-column-reverse flex-lg-row">
+                        <div class="col-12 col-lg-4 my-3 my-lg-0">
                             <div class="overflow-auto border-rounded" style="height: 300px;">
                                 <div class="nav flex-column nav-pills" id="courses-nav" role="tablist">
 {#                                    <div class="spinner-border text-info"></div>#}
                                 </div>
                             </div>
                         </div>
-                        <div class="col-7">
+                        <div class="col-12 col-lg-8">
                             <div class="tab-content" id="courses-content">
 {#                                <div class="spinner-border text-info"></div>#}
                             </div>
