set role works but doesnt, 404 error

--- a/designapp1/templates/userpage.html
+++ b/designapp1/templates/userpage.html
@@ -20,6 +20,7 @@
     {% include 'navbar.html' %}
 
     <div class="container bg-light p-4">
+        <div id="alert-div"></div>
         <div class="row">
             <div id="user-info"></div>
             <div class="col-8">
