added add_course page changed some errors in user.ts

--- a/designapp1/templates/admin.html
+++ b/designapp1/templates/admin.html
@@ -42,6 +42,8 @@
             <div class="col-12 col-lg-6">
                 <div class=" center-block
     container border border-dark rounded-lg shadow-lg bg-white p-3 py-xl-5 text-center">
+                    <p class="text-left small mt-2 mb-0"><a href="/add_course">Add course</a></p>
+
                     <!-- Website title -->
                     <div class="row">
                         <div class="col-12 text-center">
@@ -53,13 +55,13 @@
                         <div class="col-12 col-lg-4 my-3 my-lg-0">
                             <div class="overflow-auto border-rounded" style="height: 300px;">
                                 <div class="nav flex-column nav-pills" id="courses-nav" role="tablist">
-{#                                    <div class="spinner-border text-info"></div>#}
+                                    {#                                    <div class="spinner-border text-info"></div>#}
                                 </div>
                             </div>
                         </div>
                         <div class="col-12 col-lg-8">
                             <div class="tab-content" id="courses-content">
-{#                                <div class="spinner-border text-info"></div>#}
+                                {#                                <div class="spinner-border text-info"></div>#}
                             </div>
                         </div>
                     </div>
@@ -92,7 +94,7 @@
                                     </tr>
                                     </thead>
                                     <tbody id="users">
-{#                                    <tr class="spinner-border text-info"></tr>#}
+                                    {#                                    <tr class="spinner-border text-info"></tr>#}
                                     </tbody>
                                 </table>
                             </div>
